tests/negative/Test5.sp
(* Testing definition without type on arguments *)

abs:Int where abs > 0 (val);